--- a/chemoinformatics_2_molecular_graphs.ipynb
+++ b/chemoinformatics_2_molecular_graphs.ipynb
@@ -18,7 +18,28 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Chemoinformatics: Molecular Graphs"
+        "Created with Google Gemini v2.5 Pro"
+      ],
+      "metadata": {
+        "id": "j3Uu-mcSzOkY"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Chemoinformatics: Molecular Graphs\n",
+        "\n",
+        "A molecule, with its intricate arrangement of atoms and bonds, is a rich piece of information. But how can we translate this complex chemical structure into a format that a computer can understand and analyze? The answer lies in a simple yet powerful concept: the **molecular graph**.\n",
+        "\n",
+        "This notebook introduces one of the foundational ideas in chemoinformatics. We will treat molecules as graphs, where:\n",
+        "\n",
+        "Atoms are the **nodes** (or vertices).\n",
+        "\n",
+        "Chemical bonds are the **edges** that connect them.\n",
+        "\n",
+        "By representing molecules this way, we unlock the entire toolkit of **graph theory** to quantify, compare, and analyze chemical structures.\n",
+        "\n",
+        "This notebook will guide you through using Python libraries like `RDKit` and `NetworkX` to build, visualize, and analyze these graphs, turning abstract chemical drawings into tangible, computable data."
       ],
       "metadata": {
         "id": "X0SLjHVm-NcE"
