--- a/chemoinformatics_1_chemical_space.ipynb
+++ b/chemoinformatics_1_chemical_space.ipynb
@@ -142,10 +142,47 @@
       "source": [
         "## Generate Molecular Fingerprints\n",
         "\n",
-        "Now, we need to convert these chemical structures into a format a machine learning algorithm can understand: numbers. We will use Morgan fingerprints (a type of circular fingerprint) for this. Each molecule will be represented as a long vector (a list of 0s and 1s) of a fixed length (e.g., 2048 bits)."
+        "Now, we need to convert these chemical structures into a format a machine learning algorithm can understand: numbers.\n",
+        "\n",
+        "Before we generate these numbers, it's important to understand what a molecular fingerprint is.\n",
+        "\n",
+        "Think of it like a barcode for a molecule. It's a compact, digital representation that summarizes the molecule's structure. Most fingerprints are bit vectors, which are simply long arrays of 0s and 1s.\n",
+        "\n",
+        "Each position (or \"bit\") in the array corresponds to a specific structural feature.\n",
+        "\n",
+        "If the molecule has that feature, the bit is 1.\n",
+        "\n",
+        "If it doesn't have the feature, the bit is 0.\n",
+        "\n",
+        "This allows a computer to quickly compare molecules by just comparing their barcodes."
       ],
       "metadata": {
         "id": "qFrYEBG9VyBt"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Morgan Fingerprints**\n",
+        "We will use Morgan fingerprints (a type of circular fingerprint) for this. Each molecule will be represented as a long vector (a list of 0s and 1s) of a fixed length (e.g., 2048 bits).\n",
+        "<details>\n",
+        "<summary>Additional Information</summary>\n",
+        "\n",
+        "The Morgan fingerprint, a type of **Extended-Connectivity Fingerprint (ECFP)**, is one of the most effective and widely used types. It works by identifying circular substructures around each atom.\n",
+        "\n",
+        "Atom Identifiers: Initially, each atom is described by its properties (like atomic number, connections, etc.).\n",
+        "\n",
+        "Iterative Growth: The algorithm then \"grows\" outward. In each iteration (defined by a radius), it captures a larger circular neighborhood around every atom. The identifier for this new, larger fragment includes the information from all the atoms within that radius.\n",
+        "\n",
+        "Hashing and Folding: Each unique fragment identifier is processed by a \"hashing function\" that converts it into a number. This number determines which bit in the final vector gets switched to 1. To keep the fingerprint at a fixed length (e.g., 2048 bits), the output of the hash function is \"folded\" to fit within this size.\n",
+        "\n",
+        "**What are the 2048 dimensions?**\n",
+        "\n",
+        "The 2048 dimensions are the bits in our final, fixed-length vector. Crucially, due to the hashing and folding process explained above, each bit does not represent one single, human-readable feature. Instead, each bit can be activated by one or more different circular substructures that happen to hash to the same position. This is a trade-off that makes fingerprints very fast and efficient, even if it makes them a bit harder to interpret directly.\n",
+        "<details>"
+      ],
+      "metadata": {
+        "id": "3p3Pv0ePlxx-"
       }
     },
     {
@@ -154,12 +191,14 @@
         "# Generate Morgan fingerprints for each molecule\n",
         "# Radius 2 is standard (ECFP4), nBits is the length of the vector\n",
         "fp_list = []\n",
+        "bitinfo_list = [] # We'll store bit info here for later analysis\n",
         "for mol in mols:\n",
-        "    fp = AllChem.GetMorganFingerprintAsBitVect(mol, 2, nBits=2048)\n",
+        "    bitinfo = {}\n",
+        "    fp = AllChem.GetMorganFingerprintAsBitVect(mol, 2, nBits=2048, bitInfo=bitinfo)\n",
         "    fp_list.append(fp)\n",
+        "    bitinfo_list.append(bitinfo)\n",
         "\n",
         "# Convert the RDKit explicit bit vectors into a NumPy array\n",
-        "# This is our high-dimensional data\n",
         "np_fps = np.array(fp_list)\n",
         "\n",
         "print(f\"Shape of our fingerprint matrix: {np_fps.shape}\")\n",
@@ -324,18 +363,125 @@
     {
       "cell_type": "markdown",
       "source": [
+        "## Investigating Feature Importance\n",
+        "\n",
+        "The PCA plot shows us how the molecules are separated, but not why. Which specific structural features are PC1 and PC2 using to make their decisions?\n",
+        "\n",
+        "To find out, we can inspect the PCA loadings. The loadings tell us how much each of our original 2048 features (the fingerprint bits) contributes to each principal component. A bit with a large loading (either positive or negative) is highly influential.\n",
+        "\n",
+        "We can then visualize the substructures that correspond to these highly influential bits."
+      ],
+      "metadata": {
+        "id": "0-R3hj9AnsZe"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# The loadings are stored in pca.components_\n",
+        "# The shape is (n_components, n_features), so (2, 2048) in our case\n",
+        "loadings = pca.components_\n",
+        "\n",
+        "# --- Analyze PC1 ---\n",
+        "pc1_loadings = loadings[0]\n",
+        "# Get the indices of the bits with the highest absolute influence on PC1\n",
+        "influential_bits_pc1 = np.argsort(np.abs(pc1_loadings))[::-1][:5] # Top 5\n",
+        "\n",
+        "print(\"--- Top 5 Most Influential Substructures for PC1 ---\")\n",
+        "# Find which molecule these bits came from and draw the substructures\n",
+        "for bit in influential_bits_pc1:\n",
+        "    # Find a molecule that has this bit set to 1\n",
+        "    for i, fp in enumerate(fp_list):\n",
+        "        if fp[int(bit)]:\n",
+        "            print(f\"Bit {bit} (from {mol_names[i]})\")\n",
+        "            display(Draw.DrawMorganBit(mols[i], int(bit), bitinfo_list[i]))\n",
+        "            break"
+      ],
+      "metadata": {
+        "id": "Vu46SB5sn16A"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# --- Analyze PC2 ---\n",
+        "pc2_loadings = loadings[1]\n",
+        "# Get the indices of the bits with the highest absolute influence on PC2\n",
+        "influential_bits_pc2 = np.argsort(np.abs(pc2_loadings))[::-1][:5] # Top 5\n",
+        "\n",
+        "print(\"\\n--- Top 5 Most Influential Substructures for PC2 ---\")\n",
+        "for bit in influential_bits_pc2:\n",
+        "    for i, fp in enumerate(fp_list):\n",
+        "        if fp[int(bit)]:\n",
+        "            print(f\"Bit {bit} (from {mol_names[i]})\")\n",
+        "            display(Draw.DrawMorganBit(mols[i], int(bit), bitinfo_list[i]))\n",
+        "            break"
+      ],
+      "metadata": {
+        "id": "b3XN4ETcpBMp"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "### Task 2: Explain the Layout of our 2D Chemical Space Plot\n",
         "\n",
-        "For each Question below, justify the molecule's position by comparing its chemical structure to its neighbors.\n",
+        "For each Question below, justify the molecule's position by comparing its chemical structure to its neighbors and the identified important features.\n",
         "\n",
         "**Q1**: The plot shows Caffeine is the most isolated molecule, pushed far out along the PC1 axis. Identify at least two unique structural features of Caffeine that are absent in all other molecules and explain why they make it the primary outlier.\n",
         "\n",
         "**Q2**: Locate Benzene, Toluene, and Phenol. They all share a core benzene ring, yet they are spread out. Explain their specific order on the plot. Why is Toluene much closer to Phenol than Benzene is?\n",
         "\n",
-        "**Q3**: The alcohols (Methanol, Ethanol, Propanol) are clustered very tightly. What single, systematically changing feature is responsible for the small separation that does exist between them?"
+        "**Q3**: The alcohols (Methanol, Ethanol, Propanol) are clustered very tightly. What single, systematically changing feature is responsible for the small separation that does exist between them?\n",
+        "\n",
+        "**Q4**: Why is the C=O group in caffeine identified as the most important feature in the feature importance. There are C=O groups in e.g. Aspirin and Paracetamol, while the heterocyclic C-N-C motifs are unique to caffeine?"
       ],
       "metadata": {
         "id": "5kAAaWASn3-z"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### 🔍 Solution to Q4 (Hidden - Expand to see the answer)\n",
+        "\n",
+        "<details>\n",
+        "<summary>Click here to see the solution after you've tried exploring the functions</summary>\n",
+        "The key to understanding this result lies in remembering how Morgan fingerprints work: they encode not just an atom or a bond, but its entire local chemical environment.\n",
+        "\n",
+        "**The Environment is Everything**\n",
+        "The C=O group in caffeine is not seen by the algorithm as just an isolated carbonyl. Instead, the fingerprint bit that is generated represents the C=O group plus the atoms it's connected to within a specific radius.\n",
+        "\n",
+        "Let's compare the environments:\n",
+        "\n",
+        "**Caffeine's C=O**: This carbonyl is part of a unique, electron-deficient, nitrogen-rich, fused purine ring system. The influential bit likely represents a fragment like N-C(=O)-N within that specific ring structure.\n",
+        "\n",
+        "**Aspirin's C=O**: One is part of an ester (O-C(=O)-C) and the other is part of a carboxylic acid (O=C(-O)-C), both attached to a simple benzene ring.\n",
+        "\n",
+        "**Paracetamol's C=O**: This one is part of an amide group (N-C(=O)-C) attached to a phenol ring.\n",
+        "\n",
+        "Because the local environments are completely different, the algorithm generates different fragment identifiers for each of these C=O groups. These different identifiers are then hashed to different bits in the 2048-bit vector.\n",
+        "\n",
+        "**Why C=O and not C-N-C?**\n",
+        "You are correct that the heterocyclic C-N-C motifs are unique to caffeine and are the reason for its separation along PC1. The feature importance analysis simply highlighted one of the most information-rich parts of that unique scaffold.\n",
+        "\n",
+        "Think of it this way:\n",
+        "\n",
+        "The entire purine scaffold of caffeine is what makes it an outlier.\n",
+        "\n",
+        "The PCA identifies all the bits that represent fragments of this unique scaffold as important.\n",
+        "\n",
+        "When we ask for the \"top 5\" most influential bits, it just so happens that **one of the most statistically powerful fragments within that unique scaffold is the carbonyl group in its unique purine environment**. The other influential bits shown are, as you noted, other parts of that same unique heterocyclic system.\n",
+        "\n",
+        "In short,the analysis is highlighting different pieces of the same unique puzzle. The C=O bit is ranked highly not because it's a simple carbonyl, but because it's a \"caffeine-flavored\" carbonyl, which is a feature no other molecule in the dataset possesses.\n",
+        "</details>"
+      ],
+      "metadata": {
+        "id": "CrhJSg2vrnLP"
       }
     },
     {
@@ -355,22 +501,20 @@
         "\n",
         "On one side of the Y-axis, you'll find the alcohols (Methanol, Ethanol, Propanol).\n",
         "\n",
-        "On the other side, you'll find all the molecules that contain a benzene ring (Benzene, Toluene, Phenol, Aspirin, and Paracetamol).\n",
-        "\n",
-        "**In conclusion**, this is a perfect illustration of how PCA deconstructs chemical space. It first isolated the biggest outlier (Caffeine) along PC1 and then used PC2 to organize the remaining, more closely related molecules based on their most significant shared feature: the presence or absence of an aromatic ring."
+        "On the other side, you'll find all the molecules that contain a benzene ring (Benzene, Toluene, Phenol, Aspirin, and Paracetamol)."
       ],
       "metadata": {
         "id": "-l4cAmB7XkTb"
       }
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "**In conclusion**, this is a perfect illustration of how PCA deconstructs chemical space. It first isolated the biggest outlier (Caffeine) along PC1 and then used PC2 to organize the remaining, more closely related molecules based on their most significant shared feature: the presence or absence of an aromatic ring."
+      ],
       "metadata": {
-        "id": "_nVK7WB_XaAk"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "jO1kHxp1rnPi"
+      }
     }
   ]
 }
