Fixed small code errors

--- a/chemoinformatics_3_smiles.ipynb
+++ b/chemoinformatics_3_smiles.ipynb
@@ -377,7 +377,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Generate SMILES from both, but this time ask for the *canonical* version\n",
+        "# Generate SMILES from both\n",
         "smiles_1 = Chem.MolToSmiles(ethanol_mol_1, canonical=False)\n",
         "smiles_2 = Chem.MolToSmiles(ethanol_mol_2, canonical=False)"
       ],
@@ -648,8 +648,7 @@
         "\n",
         "# 4. Visualize the isomers\n",
         "print(\"Visual Comparison:\")\n",
-        "# --- YOUR CODE GOES HERE ---\n",
-        "display(Draw.MolsToGridImage(mols, legends=names))"
+        "display(Draw.MolsToGridImage(# --- YOUR CODE GOES HERE ---, legends=names))"
       ],
       "metadata": {
         "id": "EhxWzG5mHaQm"
