Mit Colab erstellt

--- a/chemoinformatics_4_chemical_databases.ipynb
+++ b/chemoinformatics_4_chemical_databases.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO0szZ96ElJt6384Rddl1QN",
+      "authorship_tag": "ABX9TyOiZ0Tm21D/AEW0iWJLq+4a",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -361,6 +361,7 @@
         "\n",
         "# The query substructure (phenylsulfonamide) as a SMARTS string\n",
         "query_smarts = \"c1ccc(S(=O)(=O)N)cc1\"\n",
+        "query_smarts = \"a1aaaa(S(=O)(=O)N)a1\"\n",
         "\n",
         "# Convert the SMARTS string into a query molecule object\n",
         "query_mol = Chem.MolFromSmarts(query_smarts)\n",
@@ -1016,11 +1017,22 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# --- YOUR CODE HERRE ---\n"
+      ],
+      "metadata": {
+        "id": "sVi6sgymNyT0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "## Substructure Search: Finding Molecules with a Specific Fragment\n",
         "\n",
-        "A more powerful query is a substructure search (SSS).\n",
+        "A more powerful query is a substructure search.\n",
         "\n",
         "Let's find molecules in PubChem that contain the **coumarin** scaffold. It's a bicyclic structure that's the basis for many natural products and pharmaceuticals (like the anticoagulant Warfarin).\n",
         "\n",
@@ -1040,8 +1052,40 @@
         "# Initiate the substructure search to get a ListKey\n",
         "substructure_smiles = \"C1=CC=C2C(=C1)C=CC(=O)O2\"\n",
         "base_url = \"https://pubchem.ncbi.nlm.nih.gov/rest/pug\"\n",
-        "search_url = f\"{base_url}/compound/substructure/smiles/{substructure_smiles}/JSON\"\n",
+        "search_url = f\"{base_url}/compound/substructure/smiles/{substructure_smiles}/JSON\""
+      ],
+      "metadata": {
+        "id": "IfF64Ba6LGhJ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Note: In the code above, we used \"substructure\" as a query argument!\n",
         "\n",
+        "Let's visualize the coumarin molecule:"
+      ],
+      "metadata": {
+        "id": "NXB3apmPPcBm"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "coumarin_mol = Chem.MolFromSmiles(substructure_smiles)\n",
+        "display(coumarin_mol)"
+      ],
+      "metadata": {
+        "id": "ucb_BfI5LGsK"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "print(\"Sending search request to PubChem...\")\n",
         "\n",
         "try:\n",
@@ -1059,6 +1103,7 @@
         "\n",
         "        # Poll the server until the results are ready\n",
         "        retrieve_url = f\"{base_url}/compound/listkey/{listkey}/cids/JSON\"\n",
+        "        print(f\"The URL for retrieving the results is {retrieve_url}\")\n",
         "        print(\"Polling server for results... (this may take a moment)\")\n",
         "\n",
         "        status = \"Waiting\"\n",
@@ -1081,9 +1126,9 @@
         "\n",
         "        if 'IdentifierList' in results_data:\n",
         "            compound_ids = results_data['IdentifierList']['CID']\n",
-        "            print(f\"Found {len(compound_ids)} molecules containing the catechol fragment.\")\n",
-        "            print(f\"Here are the first 10 Compound IDs (CIDs):\")\n",
-        "            print(compound_ids[:10])\n",
+        "            print(f\"Found {len(compound_ids)} molecules containing the coumarin fragment.\")\n",
+        "            print(f\"Here are the first 6 Compound IDs (CIDs):\")\n",
+        "            print(compound_ids[:6])\n",
         "        else:\n",
         "            print(\"Search finished, but no identifiers were found.\")\n",
         "            print(\"Server response:\", results_data)\n",
@@ -1095,6 +1140,41 @@
       ],
       "metadata": {
         "id": "f5eCdqzULK0W"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Retrieve and Visualize Top Hits\n",
+        "if 'IdentifierList' in results_data:\n",
+        "    # Get the top 5 similar compound IDs\n",
+        "    cids = compound_ids[:6]\n",
+        "    print(f\"Found top 5 similar CIDs: {cids}\")\n",
+        "\n",
+        "    # Prepare CIDs for property fetching (Query + Hits)\n",
+        "    all_cids_to_draw = [str(dopamine_cid)] + [str(cid) for cid in cids]\n",
+        "    cids_str = \",\".join(all_cids_to_draw)\n",
+        "\n",
+        "    # Fetch SMILES for all molecules in a single request\n",
+        "    properties_url = f\"{base_url}/compound/cid/{cids_str}/property/CanonicalSMILES/JSON\"\n",
+        "    prop_res = requests.get(properties_url)\n",
+        "    prop_data = prop_res.json()['PropertyTable']['Properties']\n",
+        "\n",
+        "    # Create a dictionary of {CID: SMILES}\n",
+        "    cid_smiles_map = {item['CID']: item['ConnectivitySMILES'] for item in prop_data}\n",
+        "\n",
+        "    # Prepare data for RDKit, ensuring Dopamine is first\n",
+        "    mols_to_draw = [Chem.MolFromSmiles(cid_smiles_map[cid]) for cid in cids]\n",
+        "    legends = [f\"Coumarin (Query)\"] + [f\"CID: {cid}\" for cid in cids]\n",
+        "\n",
+        "    # Generate and save the image\n",
+        "    img = Draw.MolsToGridImage(mols_to_draw, molsPerRow=3, subImgSize=(300, 300), legends=legends)\n",
+        "img\n"
+      ],
+      "metadata": {
+        "id": "zzE_IxjINEs5"
       },
       "execution_count": null,
       "outputs": []
@@ -1120,9 +1200,28 @@
         "# Define our base URL and query molecule\n",
         "base_url = \"https://pubchem.ncbi.nlm.nih.gov/rest/pug\"\n",
         "dopamine_smiles = \"C1=CC(=C(C=C1CCN)O)O\"\n",
-        "dopamine_cid = 681 # Known CID for Dopamine\n",
-        "\n",
+        "dopamine_cid = 681 # Known CID for Dopamine"
+      ],
+      "metadata": {
+        "id": "hwdL3rI6P7q2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "We will do the similarity search with a Tanimoto threshold of 95 (Threshold=95)."
+      ],
+      "metadata": {
+        "id": "6MhttVngQK1_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "print(\"Initiating Asynchronous Similarity Search\")\n",
+        "print(\"Tanimoto Similarity Threshold: 95%\")\n",
         "\n",
         "# The SMILES and Threshold must be part of the URL itself for the POST request.\n",
         "search_url = f\"{base_url}/compound/similarity/smiles/{dopamine_smiles}/JSON?Threshold=95\"\n",
@@ -1162,36 +1261,6 @@
         "\n",
         "        print(\"\\n--- Search Complete! ---\")\n",
         "\n",
-        "        # Retrieve and Visualize Top Hits\n",
-        "        if 'IdentifierList' in results_data:\n",
-        "            # Get the top 5 similar compound IDs\n",
-        "            similar_cids = results_data['IdentifierList']['CID'][:5]\n",
-        "            print(f\"Found top 5 similar CIDs: {similar_cids}\")\n",
-        "\n",
-        "            # Prepare CIDs for property fetching (Query + Hits)\n",
-        "            all_cids_to_draw = [str(dopamine_cid)] + [str(cid) for cid in similar_cids]\n",
-        "            cids_str = \",\".join(all_cids_to_draw)\n",
-        "\n",
-        "            # Fetch SMILES for all molecules in a single request\n",
-        "            properties_url = f\"{base_url}/compound/cid/{cids_str}/property/CanonicalSMILES/JSON\"\n",
-        "            prop_res = requests.get(properties_url)\n",
-        "            prop_data = prop_res.json()['PropertyTable']['Properties']\n",
-        "\n",
-        "            # Create a dictionary of {CID: SMILES}\n",
-        "            cid_smiles_map = {item['CID']: item['CanonicalSMILES'] for item in prop_data}\n",
-        "\n",
-        "            # Prepare data for RDKit, ensuring Dopamine is first\n",
-        "            mols_to_draw = [Chem.MolFromSmiles(cid_smiles_map[cid]) for cid in [dopamine_cid] + similar_cids]\n",
-        "            legends = [f\"Dopamine (Query)\"] + [f\"CID: {cid}\" for cid in similar_cids]\n",
-        "\n",
-        "            # Generate and save the image\n",
-        "            img = Draw.MolsToGridImage(mols_to_draw, molsPerRow=3, subImgSize=(300, 300), legends=legends)\n",
-        "            img.save('similarity_hits.png')\n",
-        "            print(\"\\nImage 'similarity_hits.png' has been generated successfully.\")\n",
-        "\n",
-        "        else:\n",
-        "            print(\"Search finished, but no identifiers were found.\")\n",
-        "\n",
         "except requests.exceptions.RequestException as e:\n",
         "    print(f\"An error occurred: {e}\")\n",
         "except KeyError as e:\n",
@@ -1206,18 +1275,66 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Exercise 7\n",
-        "\n",
-        "Modify the code in the last section to perform a similarity search for Paracetamol (also known as Acetaminophen).\n",
-        "\n",
-        "Find the SMILES string for Paracetamol.\n",
-        "\n",
-        "Use it to perform a similarity search with a Tanimoto threshold of 90 (Threshold=90).\n",
-        "\n",
-        "Retrieve and visualize the top 5 most similar molecules from PubChem."
+        "Note: In the code above, we used \"substructure\" as a query argument!"
       ],
       "metadata": {
-        "id": "oVhe5vFG8Zhj"
+        "id": "STwIS_4oP4jr"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Retrieve and Visualize Top Hits\n",
+        "if 'IdentifierList' in results_data:\n",
+        "    # Get the top 5 similar compound IDs\n",
+        "    similar_cids = results_data['IdentifierList']['CID'][:5]\n",
+        "    print(f\"Found top 5 similar CIDs: {similar_cids}\")\n",
+        "\n",
+        "    # Prepare CIDs for property fetching (Query + Hits)\n",
+        "    all_cids_to_draw = [str(dopamine_cid)] + [str(cid) for cid in similar_cids]\n",
+        "    cids_str = \",\".join(all_cids_to_draw)\n",
+        "\n",
+        "    # Fetch SMILES for all molecules in a single request\n",
+        "    properties_url = f\"{base_url}/compound/cid/{cids_str}/property/CanonicalSMILES/JSON\"\n",
+        "    prop_res = requests.get(properties_url)\n",
+        "    prop_data = prop_res.json()['PropertyTable']['Properties']\n",
+        "\n",
+        "    # Create a dictionary of {CID: SMILES}\n",
+        "    cid_smiles_map = {item['CID']: item['ConnectivitySMILES'] for item in prop_data}\n",
+        "\n",
+        "    # Prepare data for RDKit, ensuring Dopamine is first\n",
+        "    mols_to_draw = [Chem.MolFromSmiles(cid_smiles_map[cid]) for cid in [dopamine_cid] + similar_cids]\n",
+        "    legends = [f\"Dopamine (Query)\"] + [f\"CID: {cid}\" for cid in similar_cids]\n",
+        "\n",
+        "    # Generate and save the image\n",
+        "    img = Draw.MolsToGridImage(mols_to_draw, molsPerRow=3, subImgSize=(300, 300), legends=legends)\n",
+        "img\n"
+      ],
+      "metadata": {
+        "id": "p8c64GWHMrdu"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#"
+      ],
+      "metadata": {
+        "id": "c-oc7gRPRTUd"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Additional Information\n",
+        "\n",
+        "You can find additional information on searching PubChem using non-textual queries here:\n",
+        "https://chem.libretexts.org/Courses/Fordham_University/Chem1102%3A_Drug_Discovery_-_From_the_Laboratory_to_the_Clinic/12%3A_Chemical_and_Biological_Databases/12.07%3A_Searching_PubChem_Using_a_Non-Textual_Query\n"
+      ],
+      "metadata": {
+        "id": "FGKcAUODRTYa"
       }
     },
     {
